@@ -5,19 +5,21 @@ import app.order.model.Order;
 import app.order.model.OrderItem;
 import app.product.model.Product;
 import app.user.model.User;
+import org.mapstruct.Mapper;
+import org.mapstruct.Mapping;
+import org.mapstruct.MappingTarget;
 import org.springframework.data.domain.Page;
-import org.springframework.stereotype.Component;
 
 import java.math.BigDecimal;
 import java.util.List;
 import java.util.Map;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
-@Component
-public class AdminMapper {
+@Mapper(componentModel = "spring")
+public interface AdminMapper {
 
-    public DashboardStatsDTO toDashboardStatsDTO(
+    // Dashboard Stats
+    default DashboardStatsDTO toDashboardStatsDTO(
             Long totalProducts,
             Long totalUsers,
             Long totalOrders,
@@ -35,66 +37,36 @@ public class AdminMapper {
                 .build();
     }
 
-    //Product Mapping Methods
+    // Product Mapping Methods
+    @Mapping(target = "id", ignore = true)
+    @Mapping(target = "createdAt", ignore = true)
+    @Mapping(target = "updatedAt", ignore = true)
+    @Mapping(target = "reviews", ignore = true)
+    @Mapping(target = "cartItems", ignore = true)
+    @Mapping(target = "orderItems", ignore = true)
+    Product toProductEntity(CreateProductRequest request);
 
-    public Product toProductEntity(CreateProductRequest request) {
-        if (request == null) {
-            return null;
-        }
+    @Mapping(target = "id", ignore = true)
+    @Mapping(target = "createdAt", ignore = true)
+    @Mapping(target = "updatedAt", ignore = true)
+    @Mapping(target = "reviews", ignore = true)
+    @Mapping(target = "cartItems", ignore = true)
+    @Mapping(target = "orderItems", ignore = true)
+    @Mapping(target = "active", source = "request.isActive")
+    void updateProductEntity(@MappingTarget Product product, UpdateProductRequest request);
 
-        return Product.builder()
-                .name(request.getName())
-                .description(request.getDescription())
-                .price(request.getPrice())
-                .imageUrl(request.getImageUrl())
-                .category(request.getCategory())
-                .stockQuantity(request.getStockQuantity())
-                .isActive(request.getIsActive())
-                .build();
-    }
+    @Mapping(target = "inStock", expression = "java(product.getStockQuantity() > 0)")
+    @Mapping(target = "isActive", source = "product.active")
+    @Mapping(target = "totalSales", source = "totalSales")
+    AdminProductDTO toAdminProductDTO(Product product, Integer totalSales);
 
-    public void updateProductEntity(Product product, UpdateProductRequest request) {
-        if (product == null || request == null) {
-            return;
-        }
-
-        product.setName(request.getName());
-        product.setDescription(request.getDescription());
-        product.setPrice(request.getPrice());
-        product.setImageUrl(request.getImageUrl());
-        product.setCategory(request.getCategory());
-        product.setStockQuantity(request.getStockQuantity());
-        product.setActive(request.getIsActive());
-    }
-
-    public AdminProductDTO toAdminProductDTO(Product product, Integer totalSales) {
-        if (product == null) {
-            return null;
-        }
-
-        return AdminProductDTO.builder()
-                .id(product.getId())
-                .name(product.getName())
-                .description(product.getDescription())
-                .price(product.getPrice())
-                .category(product.getCategory())
-                .stockQuantity(product.getStockQuantity())
-                .imageUrl(product.getImageUrl())
-                .inStock(product.getStockQuantity() > 0)
-                .isActive(product.isActive())
-                .createdAt(product.getCreatedAt())
-                .updatedAt(product.getUpdatedAt())
-                .totalSales(totalSales != null ? totalSales : 0)
-                .build();
-    }
-
-    public List<AdminProductDTO> toAdminProductDTOList(List<Product> products, Map<UUID, Integer> salesMap) {
+    default List<AdminProductDTO> toAdminProductDTOList(List<Product> products, Map<UUID, Integer> salesMap) {
         return products.stream()
                 .map(product -> toAdminProductDTO(product, salesMap.getOrDefault(product.getId(), 0)))
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    public AdminProductPageResponse toAdminProductPageResponse(Page<Product> productPage, Map<UUID, Integer> salesMap) {
+    default AdminProductPageResponse toAdminProductPageResponse(Page<Product> productPage, Map<UUID, Integer> salesMap) {
         List<AdminProductDTO> productDTOs = toAdminProductDTOList(productPage.getContent(), salesMap);
 
         return AdminProductPageResponse.builder()
@@ -106,54 +78,24 @@ public class AdminMapper {
                 .build();
     }
 
-    //Order Mapping Methods
+    // Order Mapping Methods
+    @Mapping(target = "customerName", expression = "java(order.getUser().getFirstName() + \" \" + order.getUser().getLastName())")
+    @Mapping(target = "customerEmail", source = "user.email")
+    @Mapping(target = "status", expression = "java(order.getStatus().name())")
+    @Mapping(target = "items", source = "items")
+    AdminOrderDTO toAdminOrderDTO(Order order);
 
-    public AdminOrderDTO toAdminOrderDTO(Order order) {
-        if (order == null) {
-            return null;
-        }
+    @Mapping(target = "productName", source = "product.name")
+    AdminOrderItemDTO toAdminOrderItemDTO(OrderItem orderItem);
 
-        String customerName = order.getUser().getFirstName() + " " + order.getUser().getLastName();
-
-        List<AdminOrderItemDTO> items = order.getItems() != null
-                ? order.getItems().stream()
-                    .map(this::toAdminOrderItemDTO)
-                    .collect(Collectors.toList())
-                : List.of();
-
-        return AdminOrderDTO.builder()
-                .id(order.getId())
-                .orderNumber(order.getOrderNumber())
-                .customerName(customerName)
-                .customerEmail(order.getUser().getEmail())
-                .totalAmount(order.getTotalAmount())
-                .status(order.getStatus().name())
-                .createdAt(order.getCreatedAt())
-                .items(items)
-                .build();
-    }
-
-    private AdminOrderItemDTO toAdminOrderItemDTO(OrderItem orderItem) {
-        if (orderItem == null) {
-            return null;
-        }
-
-        return AdminOrderItemDTO.builder()
-                .id(orderItem.getId())
-                .productName(orderItem.getProduct().getName())
-                .quantity(orderItem.getQuantity())
-                .price(orderItem.getPrice())
-                .build();
-    }
-
-    public AdminOrdersResponse toAdminOrdersResponse(Page<Order> orderPage) {
+    default AdminOrdersResponse toAdminOrdersResponse(Page<Order> orderPage) {
         if (orderPage == null) {
             return null;
         }
 
         List<AdminOrderDTO> orders = orderPage.getContent().stream()
                 .map(this::toAdminOrderDTO)
-                .collect(Collectors.toList());
+                .toList();
 
         return AdminOrdersResponse.builder()
                 .orders(orders)
@@ -168,32 +110,17 @@ public class AdminMapper {
                 .build();
     }
 
-    //User Mapping Methods
+    // User Mapping Methods
+    AdminUserDTO toAdminUserDTO(User user);
 
-    public AdminUserDTO toAdminUserDTO(User user) {
-        if (user == null) {
-            return null;
-        }
-
-        return AdminUserDTO.builder()
-                .id(user.getId())
-                .email(user.getEmail())
-                .firstName(user.getFirstName())
-                .lastName(user.getLastName())
-                .role(user.getRole())
-                .createdAt(user.getCreatedAt())
-                .updatedAt(user.getUpdatedAt())
-                .build();
-    }
-
-    public AdminUsersResponse toAdminUsersResponse(Page<User> userPage) {
+    default AdminUsersResponse toAdminUsersResponse(Page<User> userPage) {
         if (userPage == null) {
             return null;
         }
 
         List<AdminUserDTO> users = userPage.getContent().stream()
                 .map(this::toAdminUserDTO)
-                .collect(Collectors.toList());
+                .toList();
 
         return AdminUsersResponse.builder()
                 .content(users)
